--- a/pages/19912.html
+++ b/pages/19912.html
@@ -1161,6 +1161,10 @@ margin-left: 0em;
 <li id="CattaneoMnev10">
 <p><a class="existingWikiWord" href="/nlab/show/Alberto+Cattaneo">Alberto Cattaneo</a>, <a class="existingWikiWord" href="/nlab/show/Pavel+Mnev">Pavel Mnev</a>, Remark 11 in <em>Remarks on Chern-Simons invariants</em>, Commun.Math.Phys.293:803-836,2010 (<a href="https://arxiv.org/abs/0811.2045">arXiv:0811.2045</a>)</p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Alberto+Cattaneo">Alberto Cattaneo</a>, <a class="existingWikiWord" href="/nlab/show/Pavel+Mnev">Pavel Mnev</a>, <a class="existingWikiWord" href="/nlab/show/Nicolai+Reshetikhin">Nicolai Reshetikhin</a>, appendix B of <em>Perturbative quantum gauge theories on manifolds with boundary</em>, Communications in Mathematical Physics, January 2018, Volume 357, Issue 2, pp 631–730 (<a href="https://arxiv.org/abs/1507.01221">arXiv:1507.01221</a>, <a href="https://doi.org/10.1007/s00220-017-3031-6">doi:10.1007/s00220-017-3031-6</a>)</p>
+</li>
 </ul>
 
 <p>and highlighted as a means to obtain <a class="existingWikiWord" href="/nlab/show/graph+complex">graph complex</a>-models for the <a class="existingWikiWord" href="/nlab/show/de+Rham+cohomology">de Rham cohomology</a> of <a class="existingWikiWord" href="/nlab/show/configuration+spaces+of+points">configuration spaces of points</a> in</p>
@@ -1196,14 +1200,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  9, 2018 at 06:15:18.
+  Last revised on November  9, 2018 at 09:38:18.
   See the <a href="https://ncatlab.org/nlab/history/correlator as differential form on configuration space of points" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/correlator+as+differential+form+on+configuration+space+of+points" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/correlator+as+differential+form+on+configuration+space+of+points/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/correlator+as+differential+form+on+configuration+space+of+points" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/correlator+as+differential+form+on+configuration+space+of+points" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/correlator+as+differential+form+on+configuration+space+of+points" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/correlator+as+differential+form+on+configuration+space+of+points/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/correlator+as+differential+form+on+configuration+space+of+points" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/correlator+as+differential+form+on+configuration+space+of+points" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/correlator as differential form on configuration space of points/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
