--- a/pages/9267.html
+++ b/pages/9267.html
@@ -855,7 +855,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>In <a class="existingWikiWord" href="/nlab/show/relativistic+field+theory">relativistic</a> <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a> an <a class="existingWikiWord" href="/nlab/show/observable">observable</a> that evaluates the <a class="existingWikiWord" href="/nlab/show/time-ordered+products">time-ordered products</a> of the point-evaluation obserables of the basic <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">fields</a> at <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math> points of <a class="existingWikiWord" href="/nlab/show/spacetime">spacetime</a> in some <a class="existingWikiWord" href="/nlab/show/state+on+a+star-algebra">state on a star-algebra</a> is called an <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-point function</em>, typically denoted</p>
+<p>In <a class="existingWikiWord" href="/nlab/show/relativistic+field+theory">relativistic</a> <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a> an <a class="existingWikiWord" href="/nlab/show/observable">observable</a> that evaluates the <a class="existingWikiWord" href="/nlab/show/time-ordered+products">time-ordered products</a> of the point-evaluation observables of the basic <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">fields</a> at <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math> points of <a class="existingWikiWord" href="/nlab/show/spacetime">spacetime</a> in some <a class="existingWikiWord" href="/nlab/show/state+on+a+star-algebra">state on a star-algebra</a> is called an <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-point function</em>, typically denoted</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mo>⟨</mo><mo>:</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo stretchy="false">)</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>2</mn></msub><mo stretchy="false">)</mo><mi>⋯</mi><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mi>n</mi></msub><mo stretchy="false">)</mo><mo>:</mo><mo>⟩</mo></mrow></mrow><annotation encoding="application/x-tex">
   \left\langle
     :
@@ -888,14 +888,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 10, 2018 at 09:04:43.
+  Last revised on November 10, 2018 at 10:36:18.
   See the <a href="https://ncatlab.org/nlab/history/n-point function" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/n-point+function" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/n-point+function/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/n-point+function" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/n-point+function" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/n-point+function" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/n-point+function/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/n-point+function" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/n-point+function" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/n-point function/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
