--- a/pages/6807.html
+++ b/pages/6807.html
@@ -556,7 +556,20 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a><ul><li><a href="#general">General</a></li><li><a href="#relation_to_supermembranes">Relation to super-membranes</a></li><li><a href="#graviton_scattering">Graviton scattering</a></li><li><a href="#black_holes">Black holes</a></li></ul></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
+<ul>
+<li><a href='#general'>General</a></li>
+<li><a href='#relation_to_supermembranes'>Relation to super-membranes</a></li>
+<li><a href='#graviton_scattering'>Graviton scattering</a></li>
+<li><a href='#black_holes'>Black holes</a></li>
+</ul>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p>The <em>BFSS matrix model</em> (<a href="#BanksFischlerShenkerSusskind96">Banks-Fischler-Shenker-Susskind 96</a>, <a href="#Seiberg97">Seiberg 97</a>) is the description of the <a class="existingWikiWord" href="/nlab/show/worldline">worldline</a> dynamics of interacting <a class="existingWikiWord" href="/nlab/show/D0-branes">D0-branes</a>. In the limit of large number <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi></mrow><annotation encoding="application/x-tex">N</annotation></semantics></math> of D0 branes supposed to encode the <a class="existingWikiWord" href="/nlab/show/non-perturbative+quantum+field+theory">strong coupling limit</a> of <a class="existingWikiWord" href="/nlab/show/type+IIA+string+theory">type IIA string theory</a> (see also at <em><a class="existingWikiWord" href="/nlab/show/M-theory">M-theory</a></em>).</p>
@@ -693,7 +706,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>M. Fabbrichesi, <em>Graviton scattering in matrix theory and supergravity</em>, in In: Ceresole A., Kounnas C., <a class="existingWikiWord" href="/nlab/show/Dieter+L%C3%BCst">Dieter Lüst</a> , <a class="existingWikiWord" href="/nlab/show/Stefan+Theisen">Stefan Theisen</a> (eds.) <em>Quantum Aspects of Gauge Theories, Supersymmetry and Unification</em>, Lecture Notes in Physics, vol 525. Springer, Berlin, Heidelberg (<a href="https://arxiv.org/abs/hep-th/9811204">arXiv:hep-th/9811204</a>)</p>
+<p>M. Fabbrichesi, <em>Graviton scattering in matrix theory and supergravity</em>, in: Ceresole A., Kounnas C., <a class="existingWikiWord" href="/nlab/show/Dieter+L%C3%BCst">Dieter Lüst</a>, <a class="existingWikiWord" href="/nlab/show/Stefan+Theisen">Stefan Theisen</a> (eds.) <em>Quantum Aspects of Gauge Theories, Supersymmetry and Unification</em>, Lecture Notes in Physics, vol 525. Springer, Berlin, Heidelberg (<a href="https://arxiv.org/abs/hep-th/9811204">arXiv:hep-th/9811204</a>)</p>
 </li>
 
 <li>
@@ -744,14 +757,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  8, 2018 at 11:10:50.
+  Last revised on November 11, 2018 at 08:51:05.
   See the <a href="https://ncatlab.org/nlab/history/BFSS matrix model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/BFSS+matrix+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/BFSS+matrix+model/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/BFSS+matrix+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/BFSS+matrix+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/BFSS+matrix+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/BFSS+matrix+model/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/BFSS+matrix+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/BFSS+matrix+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/BFSS matrix model/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
