--- a/pages/9687.html
+++ b/pages/9687.html
@@ -1173,6 +1173,10 @@ margin-left: 0em;
 <li>
 <p>Robert Iengo, section 9.1 of <em>Quantum Field Theory</em> (<a href="http://iopscience.iop.org/chapter/978-1-6432-7053-1/bk978-1-6432-7053-1ch9.pdf">pdf</a>)</p>
 </li>
+
+<li>
+<p>D. Bugg (ed.), <em>Hadron Spectroscopy and the Confinement Problem</em>, Proceedings of a NATO Advanced Study Institute, Plenum Press 1996 (<a href="https://www.springer.com/cn/book/9780306453038">doi:10.1007/978-1-4613-0375-6</a>)</p>
+</li>
 </ul>
 
 <p>Introductions and surveys include</p>
@@ -1320,14 +1324,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 11, 2018 at 06:24:24.
+  Last revised on November 11, 2018 at 09:35:12.
   See the <a href="https://ncatlab.org/nlab/history/confinement" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/confinement" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/confinement/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/confinement" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/confinement" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/confinement" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/confinement/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/confinement" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/confinement" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/confinement/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
