--- a/pages/10113.html
+++ b/pages/10113.html
@@ -1046,6 +1046,8 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
+<p>Comoutation of the <a class="existingWikiWord" href="/nlab/show/mass">mass</a> of hadrons using <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a> (see also <em><a class="existingWikiWord" href="/nlab/show/mass+gap+problem">mass gap problem</a></em>) is discussed in</p>
+
 <ul>
 <li>
 <p>S. Durr, Z. Fodor, J. Frison, C. Hoelbling, R. Hoffmann, S.D. Katz, S. Krieg, T. Kurth, L. Lellouch, T. Lippert, K.K. Szabo, G. Vulvert,</p>
@@ -1053,6 +1055,10 @@ margin-left: 0em;
 <p><em>Ab-initio Determination of Light Hadron Masses</em>,</p>
 
 <p>Science 322:1224-1227,2008 (<a href="https://arxiv.org/abs/0906.3599">arXiv:0906.3599</a>)</p>
+</li>
+
+<li>
+<p>Zoltan Fodor, Christian Hoelbling, <em>Light Hadron Masses from Lattice QCD</em>, Rev. Mod. Phys. 84, 449, (<a href="https://arxiv.org/abs/1203.4789">arXiv:1203.4789</a>)</p>
 </li>
 </ul>
 
@@ -1067,14 +1073,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 11, 2018 at 10:51:30.
+  Last revised on November 11, 2018 at 11:55:40.
   See the <a href="https://ncatlab.org/nlab/history/hadron" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/hadron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/hadron/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/hadron" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/hadron" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/hadron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/hadron/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/hadron" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/hadron" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/hadron/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
