--- a/pages/10113.html
+++ b/pages/10113.html
@@ -1046,7 +1046,7 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
-<p>Comoutation of the <a class="existingWikiWord" href="/nlab/show/mass">mass</a> of hadrons using <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a> (see also <em><a class="existingWikiWord" href="/nlab/show/mass+gap+problem">mass gap problem</a></em>) is discussed in</p>
+<p>Computation of the <a class="existingWikiWord" href="/nlab/show/mass">mass</a> of hadrons using <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a> (see also <em><a class="existingWikiWord" href="/nlab/show/mass+gap+problem">mass gap problem</a></em>) is discussed in</p>
 
 <ul>
 <li>
@@ -1073,14 +1073,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 11, 2018 at 11:55:40.
+  Last revised on November 11, 2018 at 16:22:35.
   See the <a href="https://ncatlab.org/nlab/history/hadron" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/hadron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/hadron/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/hadron" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/hadron" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/hadron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/hadron/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/hadron" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/hadron" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/hadron/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
