--- a/pages/18608.html
+++ b/pages/18608.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9264/#Item_10" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9264/#Item_13" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1030,7 +1030,17 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>In the context of the <a class="existingWikiWord" href="/nlab/show/quantization+of+Yang-Mills+theory">quantization of Yang-Mills theory</a>, the <em>mass gap problem</em> is the question of why the <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> of massless <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a> (<a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a>) have <a class="existingWikiWord" href="/nlab/show/mass">mass</a>. A solution is necessary to explain why the <a class="existingWikiWord" href="/nlab/show/strong+nuclear+force">strong nuclear force</a> is strong but short-ranged.</p>
+<p>The <em>mass gap problem</em> is an open conceptual problem in the <a class="existingWikiWord" href="/nlab/show/quantization+of+Yang-Mills+theory">quantization of Yang-Mills theory</a>, closely related to what in the <a class="existingWikiWord" href="/nlab/show/phenomenology">phenomenology</a> of <a class="existingWikiWord" href="/nlab/show/quantum+chromodynamics">quantum chromodynamics</a> is called the <em><a class="existingWikiWord" href="/nlab/show/confinement">confinement</a></em> of <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a>.</p>
+
+<p>The <a class="existingWikiWord" href="/nlab/show/Lagrangian">Lagrangian</a> for <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a> coupled to <a class="existingWikiWord" href="/nlab/show/fermion+fields">fermion fields</a> (such as for <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a>) makes manifest the existence of <a class="existingWikiWord" href="/nlab/show/mass">mass</a>-less <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a> and <a class="existingWikiWord" href="/nlab/show/gluons">gluons</a>. Indeed at short <a class="existingWikiWord" href="/nlab/show/distances">distances</a>, hence at large <a class="existingWikiWord" href="/nlab/show/energy">energy</a>, <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> is thought to exhibit a <a class="existingWikiWord" href="/nlab/show/quark-gluon+plasma">quark-gluon plasma</a> well described by these degrees of freedom.</p>
+
+<p>But at comparatively larger distances hence lower energies, it is observed in <a class="existingWikiWord" href="/nlab/show/experiment">experiment</a> as well as in <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a> computer experiment that QCD exhibits <em><a class="existingWikiWord" href="/nlab/show/confinement">confinement</a></em>, meaning that the low energy states of the theory are not free massless quarks and gluons anymore, but that these form <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> in the form of <a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a> (including, notably, <a class="existingWikiWord" href="/nlab/show/protons">protons</a> and <a class="existingWikiWord" href="/nlab/show/neutrons">neutrons</a>, and hence all the ordinary <a class="existingWikiWord" href="/nlab/show/baryon">baryonic</a> <a class="existingWikiWord" href="/nlab/show/matter">matter</a> of the <a class="existingWikiWord" href="/nlab/show/observable+universe">observable universe</a>).</p>
+
+<p>The existence of massive <a class="existingWikiWord" href="/nlab/show/hadron">hadron</a>-<a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> in low-energy <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> is thus well-established <a class="existingWikiWord" href="/nlab/show/phenomenology">phenomenologically</a>, but it is as of yet lacking a conceptual theoretical explanation.</p>
+
+<p>The <em>mass gap problem</em> is the problem in <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a> to demonstrate theoretically (i.e. not just by <a class="existingWikiWord" href="/nlab/show/lattice+QCD">computer simulation</a>) the existence of this mass gap/<a class="existingWikiWord" href="/nlab/show/confinement">confinement</a>-phenomenon in <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> and in <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a> coupled to <a class="existingWikiWord" href="/nlab/show/fermion+fields">fermion fields</a> in general.</p>
+
+<p>This issue is well and widely known in the <a class="existingWikiWord" href="/nlab/show/particle+physics">particle physics</a>-community, see for instance <a href="#Kutschke96">Kutschke 96, Section 3.1</a>, <a href="#INFN15">INFN 15</a>. It gained more attention among the <a class="existingWikiWord" href="/nlab/show/mathematics">mathematics</a>/<a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>-commutity when the <a href="http://www.claymath.org/">Clay Mathematics Institute</a> declared the problem to be one in a list of “<a href="http://www.claymath.org/millennium-problems">Millenium Problems</a>”, see <a href="#JaffeWitten">Jaffe-Witten</a>, <a href="#Douglas04">Douglas 04</a>.</p>
 
 <h2 id="related_pages">Related pages</h2>
 
@@ -1042,10 +1052,16 @@ margin-left: 0em;
 
 <h3 id="mathematics">Mathematics</h3>
 
-<p>A survey and problem description is in</p>
+<p>A survey and problem description in <a class="existingWikiWord" href="/nlab/show/mathematics">mathematics</a>/<a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a> is in</p>
 
 <ul>
-<li id="JaffeWitten"><a class="existingWikiWord" href="/nlab/show/Arthur+Jaffe">Arthur Jaffe</a>, <a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, <em>Quantum Yang-Mills theory</em> (<a href="http://www.claymath.org/sites/default/files/yangmills.pdf">pdf</a>)</li>
+<li>
+<p><a href="http://www.claymath.org/">Clay Mathematics Institute</a>, <em><a href="http://www.claymath.org/millennium-problems/yang%E2%80%93mills-and-mass-gap">Yang-Mills and Mass Gap</a></em></p>
+</li>
+
+<li id="JaffeWitten">
+<p><a class="existingWikiWord" href="/nlab/show/Arthur+Jaffe">Arthur Jaffe</a>, <a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, <em>Quantum Yang-Mills theory</em> (<a href="http://www.claymath.org/sites/default/files/yangmills.pdf">pdf</a>)</p>
+</li>
 </ul>
 
 <p>and a report on the progress (essentially none) is in</p>
@@ -1101,7 +1117,7 @@ margin-left: 0em;
 </blockquote>
 
 <ul>
-<li><a href="https://web.infn.it/csn1/index.php/en/">Istituto Nazionale di Fisica Nucleare</a>, <em>What Next: White Paper of the INFN-CSN1</em> <em>Proposal for a long term strategy for accelerator based experiments</em>, Frascati Phys.Ser. 60 (2015) 1-302 (2015-05-29) (<a href="http://inspirehep.net/record/1374543/">spire:1374543</a>, <a href="http://www.lnf.infn.it/sis/frascatiseries/Volume60/Volume60.pdf">pdf</a> ) chapter 7: <em>Hadron Physics and non-perturbative QCD</em> (<a href="http://www.infn.it/csn1/White_paper_documents/NPQCD.pdf">pdf</a>)</li>
+<li id="INFN15"><a href="https://web.infn.it/csn1/index.php/en/">Istituto Nazionale di Fisica Nucleare</a>, <em>What Next: White Paper of the INFN-CSN1</em> <em>Proposal for a long term strategy for accelerator based experiments</em>, Frascati Phys.Ser. 60 (2015) 1-302 (2015-05-29) (<a href="http://inspirehep.net/record/1374543/">spire:1374543</a>, <a href="http://www.lnf.infn.it/sis/frascatiseries/Volume60/Volume60.pdf">pdf</a> ) chapter 7: <em>Hadron Physics and non-perturbative QCD</em> (<a href="http://www.infn.it/csn1/White_paper_documents/NPQCD.pdf">pdf</a>)</li>
 </ul>
 
 <blockquote>
@@ -1135,14 +1151,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 12, 2018 at 04:57:23.
+  Last revised on November 14, 2018 at 02:34:23.
   See the <a href="https://ncatlab.org/nlab/history/mass gap" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/mass+gap" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/mass+gap/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/mass+gap" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/mass+gap" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/mass+gap" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/mass+gap/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/mass+gap" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/mass+gap" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/mass gap/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
